adding new comment inside index.html 1

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head>
 <title> MY SITE </title>
 </head>
-<h2 ALIGN=CENTER>Hello world! from JENKINS </h2>
+<h2 ALIGN=CENTER>Hello world! from JENKINS... </h2>
 </body>
 </html>
