--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title> MY SITE </title>
 </head>
-<h2 ALIGN=CENTER>Hello world! from JENKINS..  :hello guyz) </h2>
+<h2 ALIGN=CENTER>Hello world! from JENKINS..  :) </h2>
+<h2>hello guy </h2>
 </body>
 </html>
